<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="412dp"
        android:layout_height="222dp"
        android:background="@drawable/login_background_design"
        app:layout_constraintBottom_toBottomOf="@id/guideline_mid2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </View>



    <TextView
        android:id="@+id/Tv_Intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:background="@drawable/textview_shape_intro"
        android:text="@string/login_text"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#18246c"
        app:layout_constraintBottom_toTopOf="@+id/guideline_top2"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.438">
    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="329dp"
        android:layout_height="63dp"
        android:background="#ffffff"
        android:hint="@string/username_text"
        app:hintTextColor="#283593"
        app:layout_constraintBottom_toBottomOf="@id/guideline_top2"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapSentences">
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="327dp"
        android:layout_height="60dp"
        android:background="#ffffff"
        app:hintTextColor="#283593"
        android:hint="@string/password_text"
        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toTopOf="@+id/guideline_mid"
        app:layout_constraintStart_toStartOf="@id/guideline_start">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="match_parent">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="162dp"
        android:layout_height="59dp"
        android:padding="10dp"
        android:text="@string/btn_login_text"
        android:textSize="20sp"
        app:backgroundTint="@null"
        android:layout_marginEnd="6dp"
        android:background="@drawable/login_button"
        android:textStyle="bold"
        android:textColor="#0612EF"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_bottom2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_mid"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toTopOf="@+id/guideline_bottom1">
    </Button>

    <Button
        android:id="@+id/btn_forget_password"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="162dp"
        android:layout_height="59dp"
        android:padding="10dp"
        android:text="@string/forget_password_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        android:layout_marginStart="10dp"
        android:background="@drawable/button_forget_password"
        android:textColor="#0612EF"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_bottom2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintTop_toTopOf="@+id/guideline_bottom1">
    </Button>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.73" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       app:layout_constraintGuide_percent="0.10" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
      app:layout_constraintGuide_percent="0.90" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_mid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_begin="361dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_mid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="196dp"
      app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_text_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="591dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_mid2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="223dp" />
</androidx.constraintlayout.widget.ConstraintLayout>